--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,114 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical"
-            tools:context=".MainActivity">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/flipmeter"
-                android:textStyle="bold"
-                android:textSize="24sp"/>
-
-        <de.rauschdo.flipdigit_lib.Flipmeter
-                android:id="@+id/flipMeter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/double_padding"/>
-
-        <EditText
-                android:id="@+id/numberInput"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/half_padding"
-                android:maxLength="6"
-                android:inputType="phone"
-                android:textAlignment="center"
-                android:hint="@string/hint"
-                android:imeOptions="actionDone"/>
-
-        <Button
-                android:id="@+id/button_set"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/set"/>
-
-        <Button
-                android:id="@+id/button_random_set"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/set_random"/>
-
-
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/dividerColor"
-                android:layout_marginTop="@dimen/half_padding"/>
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/flipmeter_spinner"
-                android:textStyle="bold"
-                android:textSize="24sp"
-                android:layout_marginTop="@dimen/double_padding"/>
-
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <de.rauschdo.flipdigit_lib.FlipmeterSpinner
-                    android:id="@+id/flipMeterSpinner1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/double_padding"
-                    app:animSpeed="250"
-                    app:randomFlipping="true"/>
-
-            <de.rauschdo.flipdigit_lib.FlipmeterSpinner
-                    android:id="@+id/flipMeterSpinner2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/double_padding"
-                    app:animSpeed="250"
-                    app:randomFlipping="true"/>
-
-        </LinearLayout>
-
-        <EditText
-                android:id="@+id/numberInputSpinner"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/half_padding"
-                android:maxLength="2"
-                android:inputType="phone"
-                android:textAlignment="center"
-                android:hint="@string/hint_single"
-                android:imeOptions="actionDone"/>
-
-
-        <Button
-                android:id="@+id/button_set_spinner"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/set"/>
-
-        <Button
-                android:id="@+id/button_random_set_spinner"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="@string/set_random"/>
+            android:layout_height="match_parent"
+            tools:listitem="@layout/row" />
 
     </LinearLayout>
 
